--- a/src/style/common.less
+++ b/src/style/common.less
@@ -5,7 +5,7 @@
         height: calc(100vh);
     }
     .main{
-        height: calc(100vh);
+        background-color: #f1f3f5;
     }
     .content{
         position: relative;
