添加三角图标

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,5 +1,6 @@
 .home-wrap{
-    height: calc(60vh);
+    background-color:#ffffff;
+    height: calc(75.2vh);
     display: flex;
     align-items: center;
     justify-content: center;
