--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -1,4 +1,5 @@
 .header{
+    background-color:#ffffff;
     .header-top{
        height: 60px;
        line-height: 60px;
@@ -12,6 +13,16 @@
         border-top :1px solid #f9c700;
         .breadcrumb-title{
             text-align: center;
+            font-size:18px;
+            &::after{
+                position:absolute;
+                content:"";
+                left:118px;
+                top:39px;
+                border-top:9px solid  #ffffff;
+                border-left:12px solid transparent;
+                border-right:12px solid transparent;
+            }
         }
         .weather{
             text-align: right;
